src/objects/Subscription__c.object
<CustomObject>
    <description>A subscription is a product or service that has recurring charges, such as a monthly flat fee or charges based on usage. Subscriptions can also include one-time charges, such as activation fees.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoRenew?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Comment__c</fullName>
        <description>Comment for soft cancellation</description>
        <label>Cancel Reason Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <description>Reason for soft cancellation</description>
        <label>Cancel Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BroadbandTooSlow</fullName>
                </value>
                <value>
                    <fullName>BusinessClose</fullName>
                </value>
                <value>
                    <fullName>DecideLater</fullName>
                </value>
                <value>
                    <fullName>I did not make any contract with DAZN For Business</fullName>
                </value>
                <value>
                    <fullName>I want an off-season break</fullName>
                </value>
                <value>
                    <fullName>MissDedicatedSports</fullName>
                </value>
                <value>
                    <fullName>My order never arrived</fullName>
                </value>
                <value>
                    <fullName>NoSportsAnymore</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PoorVideoQuality</fullName>
                </value>
                <value>
                    <fullName>TechnicalProblems</fullName>
                </value>
                <value>
                    <fullName>The offer does not include the sports I need</fullName>
                </value>
                <value>
                    <fullName>TooExpensive</fullName>
                </value>
                <value>
                    <fullName>ViaSatellite</fullName>
                </value>
                <value>
                    <fullName>Buffering or issues with streaming</fullName>
                    <isActive>false</isActive>
                    <label>Buffering or issues with streaming</label>
                </value>
                <value>
                    <fullName>Business Closing/moving to a new owner</fullName>
                    <isActive>false</isActive>
                    <label>Business Closing/moving to a new owner</label>
                </value>
                <value>
                    <fullName>Doesn&apos;t like the UI</fullName>
                    <isActive>false</isActive>
                    <label>Doesn&apos;t like the UI</label>
                </value>
                <value>
                    <fullName>Doesn&apos;t like the commentating</fullName>
                    <isActive>false</isActive>
                    <label>Doesn&apos;t like the commentating</label>
                </value>
                <value>
                    <fullName>Duplicate Account</fullName>
                    <isActive>false</isActive>
                    <label>Duplicate Account</label>
                </value>
                <value>
                    <fullName>Internet too slow</fullName>
                    <isActive>false</isActive>
                    <label>Internet too slow</label>
                </value>
                <value>
                    <fullName>Playback fails/App Issues</fullName>
                    <isActive>false</isActive>
                    <label>Playback fails/App Issues</label>
                </value>
                <value>
                    <fullName>Poor video/audio/framerate</fullName>
                    <isActive>false</isActive>
                    <label>Poor video/audio/framerate</label>
                </value>
                <value>
                    <fullName>Season has finished</fullName>
                    <isActive>false</isActive>
                    <label>Season has finished</label>
                </value>
                <value>
                    <fullName>Sport/event unavailable</fullName>
                    <isActive>false</isActive>
                    <label>Sport/event unavailable</label>
                </value>
                <value>
                    <fullName>Suspicious Account</fullName>
                    <isActive>false</isActive>
                    <label>Suspicious Account</label>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                    <isActive>false</isActive>
                    <label>Too Expensive</label>
                </value>
                <value>
                    <fullName>Unable to login</fullName>
                    <isActive>false</isActive>
                    <label>Unable to login</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Status__c</fullName>
        <description>Filed to describe the current status of subscription cancellation</description>
        <label>Cancel Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soft</fullName>
                    <label>Soft cancelled</label>
                </value>
                <value>
                    <fullName>Hard</fullName>
                    <label>Hard cancelled</label>
                </value>
                <value>
                    <fullName>Undo</fullName>
                    <label>Undo cancel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_option__c</fullName>
        <label>Cancellation option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SpecialCancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CancelledDate__c</fullName>
        <description>The date of the Amendment object that canceled the subscription.</description>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractAcceptanceDate__c</fullName>
        <description>This is the date on which the contract was accepted by the customer, and will trigger charges that have their trigger event set to Upon Customer Acceptance.</description>
        <label>Contract Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractEffectiveDate__c</fullName>
        <description>This is the date on which the contract becomes effective, and will trigger charges that have their trigger event set to Upon Contract Effective.</description>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentTermPeriodType__c</fullName>
        <description>The period type for the current subscription term.</description>
        <inlineHelpText>The period type of the current subscription term.</inlineHelpText>
        <label>Current Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentTerm__c</fullName>
        <label>Current Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>CustomerAccount__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DAZN_Id__c</fullName>
        <description>The DAZN Id (external primary key) of this Subscription.</description>
        <inlineHelpText>The DAZN Id (external primary key) of this Subscription.</inlineHelpText>
        <label>DAZN Id (Deprecated)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hard_Cancel_Reason_Comment__c</fullName>
        <description>Comment for Hard cancelation</description>
        <label>Hard Cancel Reason Comment</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hard_Cancel_Reason__c</fullName>
        <description>Reason for Hard cancelation</description>
        <label>Hard Cancel Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor video/audio</fullName>
                </value>
                <value>
                    <fullName>Buffering or issues with streaming</fullName>
                </value>
                <value>
                    <fullName>Playback fails/App Issues</fullName>
                </value>
                <value>
                    <fullName>Unable to login</fullName>
                </value>
                <value>
                    <fullName>Duplicate Account</fullName>
                </value>
                <value>
                    <fullName>Suspicious Account</fullName>
                </value>
                <value>
                    <fullName>Bad Debt</fullName>
                </value>
                <value>
                    <fullName>Business Closing/moving to a new owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InitialTermPeriodType__c</fullName>
        <description>The period type for the first subscription term.</description>
        <inlineHelpText>The period type for the first subscription term.</inlineHelpText>
        <label>Initial Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InitialTerm__c</fullName>
        <label>Initial Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Owner</label>
        <referenceTo>CustomerAccount__c</referenceTo>
        <relationshipLabel>Subscriptions (Invoice Owner)</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <label>CMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NextChargeDate__c</fullName>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextRenewalDate__c</fullName>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityCloseDate__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCreatedDate__c</fullName>
        <description>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</description>
        <inlineHelpText>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</inlineHelpText>
        <label>Original Created Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginalCreated_Date__c</fullName>
        <description>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</description>
        <inlineHelpText>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OriginalId__c</fullName>
        <description>The original ID of this subscription.</description>
        <label>Original Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousSubscriptionId__c</fullName>
        <description>The subscription ID immediately prior to the current subscription.</description>
        <label>Previous Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteBusinessType__c</fullName>
        <label>Quote Business Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteNumber__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteType__c</fullName>
        <label>Quote Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejoined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field that indicates if a customer rejoined with Dazn</description>
        <label>Rejoined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenewalTermPeriodType__c</fullName>
        <description>The period type for the subscription renewal term.</description>
        <inlineHelpText>The period type for the subscription renewal term.</inlineHelpText>
        <label>Renewal Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RenewalTerm__c</fullName>
        <label>Renewal Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceActivationDate__c</fullName>
        <description>This is when the service was activated, and will trigger charges that have their trigger event set to Upon Service Activation.</description>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubPromoCode__c</fullName>
        <label>Sub PromoCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubStatus__c</fullName>
        <label>SubStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionEndDate__c</fullName>
        <description>This is when the subscription ends. This is always equal to term end date, unless the subscription has been cancelled. If the subscription has been cancelled, this is set to the cancellation date.</description>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubscriptionNumber__c</fullName>
        <externalId>true</externalId>
        <label>Subscription Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SubscriptionStartDate__c</fullName>
        <description>The date when the subscription term starts. This is equal to the term start date if the subscription is on its initial term. Otherwise, it is the original term start date if the subscription has renewed.</description>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TermEndDate__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermSettingType__c</fullName>
        <description>Case sensitive. Denotes if a subscription is evergreen (has no end date or term length) or has a term.</description>
        <label>Term Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TERMED</fullName>
                </value>
                <value>
                    <fullName>EVERGREEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions_Version__c</fullName>
        <description>Field to hold version of terms a condition</description>
        <label>Terms &amp; Conditions Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undo_soft_cancel_reason__c</fullName>
        <description>Field to show undo soft cancellation reason</description>
        <label>Undo soft cancel reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer changed mind</fullName>
                </value>
                <value>
                    <fullName>Soft Cancelled in error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Undo_soft_cancel_reason_comment__c</fullName>
        <description>Field to show comment for undo cancellation</description>
        <label>Undo soft cancel reason comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DAZN Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-S{00000000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAZN Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>